# wwoski

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/wwoski/: __init__.py  wwoski.py
tests/: test_wwoski.py
