[tool.poetry]
name = "wwoski"
version = "0.1.0"
description = "World weather online ski and mountain weather data API wrapper"
authors = ["HsiYu Chen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
