[tool.poetry]
name = "wwoski"
version = "0.1.0"
description = "World weather online ski and mountain weather data API wrapper"
authors = ["HsiYu Chen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.9.4"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
myst-nb = "^1.1.2"
sphinx-autoapi = "^3.4.0"
sphinx-rtd-theme = "^3.0.2"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
